@@ -25,6 +25,13 @@ before_install:
   - rm -f Gemfile.lock
 
 jobs:
+  allow_failures:
+      # TODO fail on puppet 5 for now until
+      # https://github.com/rodjek/rspec-puppet/issues/647 is resolved
+    - stage: spec
+      rvm: 2.4.1
+      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
+
   include:
     - stage: spec
       rvm: 2.4.1
