@@ -24,9 +24,6 @@
 #
 #   This parameter will overwrite and default setting in $default_options.
 #
-# @param iptables_docker_chain If using the SIMP iptables module, add the
-#   `DOCKER` chain back when the iptables rules have been changed by Puppet.
-#
 # @author https://github.com/simp/pupmod-simp-simp_docker/graphs/contributors
 #
 class simp_docker (
@@ -36,8 +33,6 @@ class simp_docker (
 
   Hash $default_options,
   Optional[Hash] $options,
-
-  Boolean $iptables_docker_chain = simplib::lookup('simp_options::firewall', { 'default_value' => false }),
 ) {
 
   # TODO: remove this block after SIMP-4261 is satisfied
@@ -65,16 +60,6 @@ class simp_docker (
         before => Class['docker'];
       'net.bridge.bridge-nf-call-iptables':  value => 1 ;
       'net.bridge.bridge-nf-call-ip6tables': value => 1 ;
-    }
-  }
-
-  if $iptables_docker_chain {
-    include 'iptables'
-
-    exec { 'Add docker chain back':
-      command     => '/sbin/iptables -t filter -N DOCKER',
-      refreshonly => true,
-      subscribe   => Class['iptables']
     }
   }
 
